# TermAPar

doc/: readme.md
docs/: readme.md
env/: CMakeLists.txt  clang-format.yaml
env/cmake/: mHelpOpt.cmake  mHelpRegex.cmake
env/dCmake.dir/dHelp.dir/: fOpt.cmake  fPack.cmake  fRegex.cmake
env/dCmake.dir/dPack.dir/: fConfig.cmake.in
src/: eExam1.cxx  eExam2.cxx  eExam3.cxx  eTest.cxx  example1.cxx  example2.cxx  lTermArgs.cxx  lTermArgs.hxx  tests.cxx
src/dTermAPar.dir/: fHead.hxx  fMain.cxx  fMain.hxx
src/dTermAPar.dir/dExam.dir/: fArg.cxx  fCmd.cxx  fOpt.cxx
src/dTermAPar.dir/dTest.dir/: fTime.cxx  fUnit.cxx
src/dTermArgsExam/: eArg.cxx  eCmd.cxx  eOpt.cxx
src/dTermArgsTest/: eUnit.cxx
